Task to remove chinese stocks from tickers.

--- a/views/index.haml
+++ b/views/index.haml
@@ -7,3 +7,11 @@
   %form{ action: "/_email", method: "POST" }
     %input{ type: "text", name: "email", placeholder: "Your Email"}
     %button{ type: "submit" } Click Me!
+
+  %h4 Updates
+  %ul
+    %li
+      %p Scrapes web pages every night at 12AM CST.  Don't expect them to be ready before 4AM CST.
+    %li
+      %p All Chinese companies have been removed.
+
